--- a/telegram-bot/src/main/resources/application.properties
+++ b/telegram-bot/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-telegram.bot.token=
+spring.datasource.url=jdbc:postgresql://localhost:5432/telegram_bot
+spring.datasource.username=user
+spring.datasource.password=12344321
+telegram.bot.token=5939656956:AAFnGPGmqNBy4lTzgQd3dF9zzjeq1hHpqKo
